change to custom image to debug what is happening
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/config/install-latest-testing.yaml
+++ b/config/install-latest-testing.yaml
@@ -49711,7 +49711,7 @@ spec:
             value: kyverno-svc
       containers:
         - name: kyverno
-          image: "ghcr.io/kyverno/kyverno:latest"
+          image: "scanner34/kyverno:latest"
           imagePullPolicy: IfNotPresent
           args:
             - --caSecretName=kyverno-svc.kyverno.svc.kyverno-tls-ca
